; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_rfb.c_rfb_recv_key_msg.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_rfb.c_rfb_recv_key_msg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rfb_softc = type { i32 }
%struct.rfb_key_msg = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rfb_softc*, i32)* @rfb_recv_key_msg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rfb_recv_key_msg(%struct.rfb_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.rfb_softc*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.rfb_key_msg, align 4
  store %struct.rfb_softc* %0, %struct.rfb_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = bitcast %struct.rfb_key_msg* %5 to i8*
  %8 = getelementptr i8, i8* %7, i64 1
  %9 = call i32 @stream_read(i32 %6, i8* %8, i32 7)
  %10 = getelementptr inbounds %struct.rfb_key_msg, %struct.rfb_key_msg* %5, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = getelementptr inbounds %struct.rfb_key_msg, %struct.rfb_key_msg* %5, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @htonl(i32 %13)
  %15 = call i32 @console_key_event(i32 %11, i32 %14)
  ret void
}

declare dso_local i32 @stream_read(i32, i8*, i32) #1

declare dso_local i32 @console_key_event(i32, i32) #1

declare dso_local i32 @htonl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
